--- a/financial_planning_tools.ipynb
+++ b/financial_planning_tools.ipynb
@@ -3218,26 +3218,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The current balance of the stock and bond positions is $67862.1\n"
+     ]
+    }
+   ],
    "source": [
     "# Print the current balance of the stock and bond portion of the members portfolio\n",
-    "# YOUR CODE HERE\n"
+    "print(f\"The current balance of the stock and bond positions is ${total_stocks_bonds}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 147,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There is a 95% chance that an initial investment of $12,000 in the portfolio with an traditional 60/40 split portfolio over the next 30 years will end within in the range of $32060.44 and $552374.93.\n"
+     ]
+    }
+   ],
    "source": [
     "# Use the lower and upper `95%` confidence intervals to calculate the range of the possible outcomes for the current stock/bond portfolio\n",
-    "ci_lower_thirty_cumulative_return = # YOUR CODE HERE\n",
-    "ci_upper_thirty_cumulative_return = # YOUR CODE HERE\n",
+    "ci_lower_thirty_cumulative_return = round(split_weight_table[8]*12000,2)\n",
+    "ci_upper_thirty_cumulative_return = round(split_weight_table[9]*12000,2)\n",
     "\n",
     "# Print the result of your calculations\n",
-    "# YOUR CODE HERE\n"
+    "print(f\"There is a 95% chance that an initial investment of $12,000 in the portfolio\"\n",
+    "      f\" with an traditional 60/40 split portfolio over the next 30 years will end within in the range of\"\n",
+    "      f\" ${split_ci_lower} and ${split_ci_upper}.\")\n"
    ]
   },
   {
