--- a/financial_planning_tools.ipynb
+++ b/financial_planning_tools.ipynb
@@ -5371,15 +5371,8 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "**Answer** Because the ranges are not the same, you are assuming more risk with 80% stock, so no, more heavily stock does not allow them to retire earlier. Your upper bound for 30 years is significantly higher with compounding money over that time period being much more attractive."
+    "Because the ranges are not the same, you are assuming more risk with 80% stock, so no, more heavily stock does not allow them to retire earlier. Your upper bound for 30 years is significantly higher with compounding money over that time period being much more attractive."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
