--- a/financial_planning_tools.ipynb
+++ b/financial_planning_tools.ipynb
@@ -5364,7 +5364,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Question: Will weighting the portfolio more heavily to stocks allow the credit union members to retire after only 10 years?"
+    "#### Question: Will weighting the portfolio more heavily to stocks allow the credit union members to retire after only 10 years?Because the ranges are not the same, you are assuming more risk with 80% stock, so no, more heavily stock does not allow them to retire earlier. Your upper bound for 30 years is significantly higher with compounding money over that time period being much more attractive."
    ]
   },
   {
